tests/baselines/reference/parserModuleDeclaration1.errors.txt
parserModuleDeclaration1.ts(1,8): error TS1035: Only ambient modules can use quoted names.


==== parserModuleDeclaration1.ts (1 errors) ====
    module "Foo" {
           ~~~~~
!!! error TS1035: Only ambient modules can use quoted names.
    }